--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash": "^4.17.4",
     "lru-cache": "^4.1.1",
     "md5": "^2.2.1",
+    "memory-cache": "^0.2.0",
     "mrhorse": "^2.1.0",
     "multiparty": "^4.1.3",
     "nes": "^6.3.1",
