--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "kcors": "^2.2.1",
     "lodash": "^4.17.11",
     "md5": "^2.2.1",
+    "memory-cache": "^0.2.0",
     "moment": "^2.22.2",
     "node-xlsx": "^0.12.1",
     "qcloudsms_js": "^0.1.1",
